fixes menu icon spacing

--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -124,10 +124,6 @@ $LINK-SIZE-MOBILE: 1rem;
     }
   }
 
-  #show-menu.menu-icon {
-    font: 900 2.5rem $FAMILY-SANS;
-  }
-
   #post {
     .post-title {
       font: bold $TITLE-SIZE-MOBILE $FAMILY-SANS;
